# telegram_content_agent

./: .env.example  .gitignore  README.md  pyproject.toml
.codex-local/prompts/: incomedy-content-cycle.md
.github/workflows/: ci.yml  deploy.yml
deploy/systemd/: telegram-content-agent.service.tpl
docs/: deployment.md  publication-rules.md  publishing-from-chat.md  server.md  spec.md
publications/InComedy/articles/: index.json
publications/InComedy/articles/active/: approved-application-not-lineup.md  ticketing-before-provider-choice.md
scripts/: deploy_remote.sh
src/telegram_content_agent/: __init__.py  articles.py  config.py  main.py  models.py  moderation.py  scheduler.py  telegram_client.py
tests/: test_app.py
