[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-content-agent"
version = "0.1.0"
description = "HTTP server for publishing Telegram channel posts with text, links, and images."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1,<1.0.0",
    "httpx>=0.28.1,<0.29.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "uvicorn>=0.35.0,<0.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1,<9.0.0",
]

[project.scripts]
telegram-content-agent = "telegram_content_agent.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
